--- a/lab4/ex5/README
+++ b/lab4/ex5/README
@@ -17,3 +17,27 @@ the IP address of the firewall).
 
 - r1 has to respond with TCP RST or ICMP Unreachable for incoming
   requests for blocked ports
+
+FOR SOLUTION
+
+# masquerading outgoing traffic eth1
+iptables -t nat -A POSTROUTING -o eth1 -j MASQUERADE
+
+# SNAT
+# Change source ip to the router's one on incoming pkts
+iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+
+# DNAT
+# incoming packets are redirected to dedicated servers
+# http/https
+iptables -A PREROUTING -t nat -i eth1 -p tcp --dport 80 -j DNAT --to-destination 192.168.10.18:80
+iptables -A PREROUTING -t nat -i eth1 -p tcp --dport 443 -j DNAT --to-destination 192.168.10.18:443
+# ssh
+iptables -A PREROUTING -t nat -i eth1 -p tcp --dport 22 -j DNAT --to-destination 192.168.10.22:22
+
+# keep outgoing traffic on the same port
+iptables -I POSTROUTING -t nat -o eth1 -m multiport -p tcp --dports 22:443 -j MASQUERADE --to-ports 22-443
+
+# drop icmp and all other traffic
+iptables -A INPUT -i eth1 -j REJECT
+iptables -A FORWARD -i eth1  -m multiport -p tcp ! --dports 22,80,443 -j REJECT
